Initial work on logic flow overhaul
Basically, there are two ways to run the logic flow in a game engine
like this, and I think I picked the wrong one, wanting to promote
developer control. Either implement a `frame_sync` function and give the
user complete logical control over the engine, or expect the user to
expose `init` and `update` functions that manipulate a global state,
which the engine hooks into a calls whenever it wants. This engine began
with the former, but is transitioning to the latter. Both approaches
have upsides and downsides.

--- a/nds/Makefile
+++ b/nds/Makefile
@@ -14,7 +14,7 @@ ARM_NONE_EABI_PATH	?= $(WONDERFUL_TOOLCHAIN)/toolchain/gcc-arm-none-eabi/bin/
 NAME		:= WASMCarts
 
 GAME_TITLE	:= WASMCarts
-GAME_SUBTITLE	:= WASM-powered Fantasy Console
+GAME_SUBTITLE	:= Lightweight Fantasy Console
 GAME_AUTHOR	:= By pgattic
 GAME_ICON	:= icon.bmp
 
