--- a/editor/Cargo.toml
+++ b/editor/Cargo.toml
@@ -4,5 +4,4 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-iced = "0.13.1"
-iced_aw = { version = "0.12.2", features = ["color_picker"] }
+macroquad = "0.4.14"
