Add stub for tilemap rendering
NOTE: might want to rehink my chosen number types for the other
functions; most of them may end up needing to be i16 instead

--- a/nds/Dockerfile
+++ b/nds/Dockerfile
@@ -3,6 +3,10 @@ FROM ubuntu:24.04 AS wasmcarts-dev
 
 ARG BRANCH=master
 
+# ===============
+# BASIC SETUP
+# ===============
+
 # Set TARGETARCH e.g. amd64, arm64, riscv64.
 ARG TARGETARCH
 
@@ -14,6 +18,10 @@ RUN apt-get update && apt-get upgrade -y && \
     apt-get install -y --no-install-recommends \
         ca-certificates curl git make
 
+
+# ===================
+# NINTENDO DS SETUP
+# ===================
 
 RUN mkdir -p /opt/wonderful/
 ADD https://wonderful.asie.pl/bootstrap/wf-bootstrap-x86_64.tar.gz /opt/wonderful/
@@ -49,19 +57,24 @@ RUN set -e; \
     cd /tmp; \
     curl -L -o v0.5.0.tar.gz https://github.com/wasm3/wasm3/archive/refs/tags/v0.5.0.tar.gz; \
     tar -xzvf v0.5.0.tar.gz; \
-    mkdir -p /tmp/release/include /tmp/release/lib; \
     cd /tmp/wasm3-0.5.0/source/; \
     echo "Compiling wasm3 sources"; \
-    /opt/wonderful/toolchain/gcc-arm-none-eabi/bin/arm-none-eabi-gcc -O3 -c *.c; \
-    /opt/wonderful/toolchain/gcc-arm-none-eabi/bin/arm-none-eabi-ld -r -o libwasm3.a *.o; \
-    find . -name '*.h' -exec cp --parents {} /tmp/release/include \;; \
-    cp libwasm3.a /tmp/release/lib; \
+    $WONDERFUL_TOOLCHAIN/toolchain/gcc-arm-none-eabi/bin/arm-none-eabi-gcc -O3 -c *.c; \
+    $WONDERFUL_TOOLCHAIN/toolchain/gcc-arm-none-eabi/bin/arm-none-eabi-ld -r -o libwasm3.a *.o; \
     echo "Installing wasm3 into $BLOCKSDSEXT/wasm3"; \
-    mkdir -p $BLOCKSDSEXT/wasm3/include $BLOCKSDSEXT/wasm3/lib; \
-    cp -r /tmp/release/include/* $BLOCKSDSEXT/wasm3/include/; \
-    cp /tmp/release/lib/libwasm3.a $BLOCKSDSEXT/wasm3/lib/
+    mkdir -p $BLOCKSDSEXT/wasm3/{lib,include}; \
+    find . -name '*.h' -exec cp --parents {} $BLOCKSDSEXT/wasm3/include \;; \
+    mv libwasm3.a $BLOCKSDSEXT/wasm3/lib/
 
-RUN wf-pacman -Sy --noconfirm blocksds-ulibrary
+
+# =====================
+# NINTENDO WII SETUP
+# =====================
+
+# Install DevKitPro's Pacman
+# RUN set -e; \
+#     sh <(curl -sfL https://apt.devkitpro.org/install-devkitpro-pacman); \
+#     dkp-pacman -S wii-dev
 
 # Use /work/ as working directory of this container.
 WORKDIR /work/
