Organize code, remove unnecessary ignores
rename `nds` to `engine`

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -7,6 +7,7 @@ add_executable(WASMCarts
   src/main.c
 )
 
+# General source files
 target_sources(WASMCarts PRIVATE
   src/cartridge.c
   src/api.c
@@ -16,12 +17,16 @@ target_sources(WASMCarts PRIVATE
 if(NINTENDO_DS)
   set(BLOCKSDS $ENV{BLOCKSDS})
   set(BLOCKSDSEXT $ENV{BLOCKSDSEXT})
+
+  # Link WASM3 build
   target_include_directories(WASMCarts PRIVATE
     ${BLOCKSDSEXT}/wasm3/include
   )
   target_link_libraries(WASMCarts PRIVATE
     ${BLOCKSDSEXT}/wasm3/lib/libwasm3.a
   )
+
+  # NDS-specific source files
   target_sources(WASMCarts PRIVATE
     src/nds/graphics.c
     src/nds/keys.c
@@ -31,11 +36,11 @@ if(NINTENDO_DS)
     NAME "WASMCarts"
     SUBTITLE "Lightweight Fantasy Console"
     AUTHOR "By pgattic"
-    # GAME_ICON icon.bmp
+    ICON "icon.bmp"
   )
-# else()
+# elseif(LINUX)
 #   target_sources(WASMCarts PRIVATE
-#     source/nds/platform_impl.c
+#     source/linux/platform_impl.c
 #   )
 endif()
 
